Republish RJ-2021-050 with some revisions

--- a/_articles/RJ-2021-050/RJ-2021-050.Rmd
+++ b/_articles/RJ-2021-050/RJ-2021-050.Rmd
@@ -6,17 +6,24 @@ author:
   affiliation: The University of Auckland
   address: Department of Statistics
   email: earo.wang@auckland.ac.nz
+  orcid: 0000-0001-6448-5260
 - name: Dianne Cook
   affiliation: Monash University
   address: Department of Econometrics and Business Statistics
   email: dicook@monash.edu
-bibliography: tsibbletalk.bib
+  orcid: 0000-0002-3813-7155
+date: '2021-06-08'
 abstract: |
   Temporal data often has a hierarchical structure, defined by categorical variables describing different levels, such as political regions or sales products. The nesting of categorical variables produces a hierarchical structure. The \CRANpkg{tsibbletalk} package is developed to allow a user to interactively explore temporal data, relative to the nested or crossed structures. It can help to discover differences between category levels, and uncover interesting periodic or aperiodic slices. The package implements a shared `tsibble` object that allows for linked brushing between coordinated views, and a shiny module that aids in wrapping timelines for seasonal patterns. The tools are demonstrated using two data examples: domestic tourism in Australia and pedestrian traffic in Melbourne.
+draft: no
+type: package
 preamble: |
   \usepackage{subfig}
-output: rjtools::rjournal_web_article
-date: '2021-06-08'
+creative_commons: CC BY
+output:
+  rjtools::rjournal_web_article:
+    toc: no
+bibliography: tsibbletalk.bib
 date_received: '2020-10-30'
 volume: 13
 issue: 1
@@ -24,10 +31,7 @@ slug: RJ-2021-050
 journal:
   lastpage: 469
   firstpage: 461
-draft: no
-
 ---
-
 
 
 ```{r setup, echo = FALSE, cache = FALSE, include = FALSE}
@@ -36,15 +40,18 @@ library(knitr)
 opts_chunk$set(
   echo = FALSE, warning = FALSE, message = FALSE, comment = "#>",
   fig.path = 'figure/', fig.align = 'center', fig.show = 'hold',
-  cache = TRUE, cache.path = 'cache/',
   out.width = ifelse(is_html_output(), "100%", "\\textwidth")
 )
+opts_knit$set(root.dir = here::here())
+```
+
+```{r external}
 read_chunk("scripts/demo.R")
 read_chunk("scripts/tourism.R")
 read_chunk("scripts/pedestrian.R")
 ```
 
-```{r, load-pkgs}
+```{r load-pkgs}
 ```
 
 # Introduction
@@ -62,9 +69,9 @@ The \CRANpkg{tsibble} package [@wang2020tsibble] introduced a unified temporal d
 
 In the spirit of tidy data from the \CRANpkg{tidyverse} [@Wickham2019], the **tidyverts** suite features `tsibble` as the foundational data structure, and helps to build a fluid and fluent pipeline for time series analysis. Besides \CRANpkg{tsibble}, the \CRANpkg{feasts} [@R-feasts] and \CRANpkg{fable} [@R-fable] packages fill the role of statistical analysis and forecasting in the **tidyverts** ecosystem. During all the steps of a time series analysis, the series of interest, denoted by the `key` variable, typically persist, through the trend modeling and also forecasting. We would typically want to examine the series across all of the keys. 
 
-Figure \@ref(fig:highlight-retail) illustrates examining temporal data with many keys. The data has 152 series corresponding to different industries in retail data. The multiple series are displayed using an overlaid time series plot, along with a scatterplot of two variables (trend versus seasonal strength) from feature space, where each series is represented by a dot. The feature space is computed using the `features()` function from \CRANpkg{feasts}, which summarises the original data for each series using various statistical features. This function along with other **tidyverts** functions is `tsibble`-aware, and outputs a table in a reduced form where each row corresponds to a series, which can be graphically displayed as in Figure \@ref(fig:highlight-retail-2).
+Figure \@ref(fig:highlight-retail) illustrates examining temporal data with many keys. The data has 152 series corresponding to different industries in retail data. The multiple series are displayed using an overlaid time series plot, along with a scatterplot of two variables (trend versus seasonal strength) from feature space, where each series is represented by a dot. The feature space is computed using the `features()` function from \CRANpkg{feasts}, which summarises the original data for each series using various statistical features. This function along with other **tidyverts** functions is `tsibble`-aware, and outputs a table in a reduced form where each row corresponds to a series, which can be graphically displayed as in Figure \@ref(fig:highlight-retail) (right).
 
-```{r highlight-retail, fig.height = 6, out.width = ".49\\linewidth", fig.show = "hold", fig.cap = "Plots for the \\code{aus\\_retail} data, with the series of strongest seasonal strength highlighted. (a) An overlaid time series plot. (b) A scatter plot drawn from their time series features, where each dot represents a time series from (a).", fig.subcap = c("", ""), fig.ncol = 2}
+```{r highlight-retail, fig.height = 3.6, fig.show = "hold", fig.cap = "Plots for the \\code{aus\\_retail} data, with the series of strongest seasonal strength highlighted. (a) An overlaid time series plot. (b) A scatter plot drawn from their time series features, where each dot represents a time series from (a)."}
 ```
 
 Figure \@ref(fig:highlight-retail) has also been highlighted to focus on the one series with the strongest seasonality. To create this highlighting, one needs to first filter the interesting series from the features table, and join back to the original `tsibble` in order to examine its trend in relation to others. This procedure can soon grow cumbersome if many series are to be explored. It illustrates a need to query interesting series on the fly. Although these two plots are static, we can consider them as linked views because the common `key` variables link between the two data tables producing the two plots. This motivates the work in this package, described in this paper, to enable interactivity of `tsibble` and `tsibble`-derived objects for rapid exploratory data analysis.
@@ -96,34 +103,34 @@ To illustrate nesting and crossing we use the `tourism_monthly` dataset [@touris
 ```{r tourism-shared, echo = TRUE}
 ```
 
-```{r tourism-linking-fig, fig.cap = "Snapshot of exploring an ensemble of linked plots of the Australian tourism data, built on a \\code{tourism\\_shared} object. It also illustrates persistent linked brushing to compare two groups."}
+```{r tourism-linking-fig, fig.cap = "Snapshot of exploring an ensemble of linked plots of the Australian tourism data, built on a \\code{tourism\\_shared} object. It also illustrates persistent linked brushing to compare two groups.", eval = knitr::is_latex_output()}
 include_graphics("img/tourism-linking.png")
 ```
 
-\noindent There is a three-level hierarchy: the root node is implicitly Australia, geographically disaggregated to states, and lower-level tourism regions. A new handy function `plotly_key_tree()` has been implemented to help explore the hierarchy. It interprets hierarchies in the shared tsibble's `spec` as a tree view, built with \CRANpkg{plotly}. The following code line produces the linked tree diagram (left panel of Figure \@ref(fig:tourism-linking-fig)). The visual for the tree hierarchy detangles a group of related series and provides a bird's eye view of the data organization.
+\noindent There is a three-level hierarchy: the root node is implicitly Australia, geographically disaggregated to states, and lower-level tourism regions. A new handy function `plotly_key_tree()` has been implemented to help explore the hierarchy. It interprets hierarchies in the shared tsibble's `spec` as a tree view, built with \CRANpkg{plotly}. The following code line produces the linked tree diagram (left panel of  Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:tourism-multi)', '\\@ref(fig:tourism-linking-fig)'))`). The visual for the tree hierarchy detangles a group of related series and provides a bird's eye view of the data organization.
 
 ```{r plotly-key-tree, echo = TRUE}
 ```
 
-The tree plot provides the graphics skeleton, upon which the rest of the data plots can be attached. In this example, small multiples of line plots are placed at the top right of Figure \@ref(fig:tourism-linking-fig) to explore the temporal trend across regions by the trip purpose. The shared tsibble data can be directly piped into \CRANpkg{ggplot2} code to create this.
+The tree plot provides the graphics skeleton, upon which the rest of the data plots can be attached. In this example, small multiples of line plots are placed at the top right of Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:tourism-multi)', '\\@ref(fig:tourism-linking-fig)'))` to explore the temporal trend across regions by the trip purpose. The shared tsibble data can be directly piped into \CRANpkg{ggplot2} code to create this.
 
-```{r tourism-series, echo = TRUE, eval = FALSE}
+```{r tourism-series, echo = TRUE, eval = knitr::is_html_output()}
 ```
 
 These line plots are heavily overplotted. To tease apart structure in the multiple time series, the `features()` function computes interesting characteristics, including the measures of trend and seasonality. These are displayed in the scatterplot at the bottom right, where one dot represents one series.
 
-```{r tourism-scatter, echo = TRUE, eval = FALSE}
+```{r tourism-scatter, echo = TRUE, eval = knitr::is_html_output()}
 ```
 
-There is one final step, to compose the three plots into an ensemble of coordinated views for exploration, shown in Figure \@ref(fig:tourism-linking-fig).  (This is the interactive realization of Figure \@ref(fig:highlight-retail)). <!-- Routine functions bring about new interaction with temporal data on the client side.-->
+There is one final step, to compose the three plots into an ensemble of coordinated views for exploration, shown in Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:tourism-multi)', '\\@ref(fig:tourism-linking-fig)'))`.  (This is the interactive realization of Figure \@ref(fig:highlight-retail)). <!-- Routine functions bring about new interaction with temporal data on the client side.-->
 
-```{r tourism-multi, echo = TRUE, eval = FALSE}
+```{r tourism-multi, layout="l-body-outset", echo = TRUE, eval = knitr::is_html_output(), fig.cap = "Exploring an ensemble of linked plots of the Australian tourism data, built on a \\code{tourism\\_shared} object. Click one of the nodes in the hierarchical tree to enable persistent linked brushing to compare two groups. Points and lines can also be selected in other plots. (Only Western Australia and Tasmania are included for the interactive plot in the html version, so size reasons.)"}
 ```
 
-Since all plots are created from one shared tsibble data source, they are self-linking views. Nodes, lines, and points are hoverable and clickable. Given the `spec`, clicking either one element in any plot highlights all points that match the `Region` category, that is, categorical linking. Figure \@ref(fig:tourism-linking-fig) is a static view of an interactive exploration. The steps in getting to this point were:
+Since all plots are created from one shared tsibble data source, they are self-linking views. Nodes, lines, and points are hoverable and clickable. Given the `spec`, clicking either one element in any plot highlights all points that match the `Region` category, that is, categorical linking. Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:tourism-multi)', '\\@ref(fig:tourism-linking-fig)'))` provides an interactive exploration. The steps in getting to this point were:
 
 1. A branch of the tree corresponding to Western Australia was first selected. (The names of the regions are a little odd, which is a quirk of the data set, but all four areas, Australia's South West, ...., correspond to tourist destinations in Western Australia. Hovering over the node on the branch brings up the state name.) This generated the response in the line plots and the scatterplot that colored corresponding time series and points as blue. 
-2. To enable persistent selection, in oder to compare regions or states, "Shift" and click on the tree was done, after switching the color to red. This generated the response that points and time series corresponding to Sydney were highlighted in red. 
+2. To enable persistent selection, in order to compare regions or states, "Shift" and click on the tree was done, after switching the color to red. This generated the response that points and time series corresponding to Sydney were highlighted in red. 
 3. Hovering over the points brings up the label for Sydney.
 
 Domestic tourism sees Sydney as one of the most popular destinations in the realm of business and friends visiting over the years. Despite the relatively weaker performance in Western Australia, Australia's North West region sees a strongest upward trend in business, bypassing Sydney in some years.
@@ -134,19 +141,21 @@ In summary, shared tsibble data nicely bridges between the \CRANpkg{crosstalk} a
 
 An important aspect of temporal data is the time context. Time has a cyclical structure, that may correspond to seasonal patterns to be discovered. The `index` component of the (shared) tsibble data forms the basis for exploring seasonality. To investigate for periodic or aperiodic patterns, series should be wrapped on themselves, where the index is broken into temporal components like quarter or day. We shall explore this with pedestrian traffic in Melbourne, Australia.
 
-```{r wrap-ped, fig.show = "hold", fig.cap = "Snapshots wrapping after slicing the \\code{pedestrian20} data at different intervals, (a) none, (b) daily and (c) weekly. This type of interaction is made possible with Shiny elements.", fig.subcap = c("Initial overview state", "1-day state", "7-day state, anchoring to Monday"), fig.ncol = 1}
+```{r wrap-ped, fig.show = "hold", fig.cap = "Snapshots wrapping after slicing the \\code{pedestrian20} data at different intervals, (a) none, (b) daily and (c) weekly. This type of interaction is made possible with Shiny elements.", fig.subcap = c("Initial overview state", "1-day state", "7-day state, anchoring to Monday"), fig.ncol = 1, eval = knitr::is_latex_output()}
 include_graphics("img/wrap-0.png")
 include_graphics("img/wrap-1.png")
 include_graphics("img/wrap-7.png")
 ```
 
-The city of Melbourne has sensors installed at various locations, to record hourly counts of pedestrians, in order to capture the daily rhythms of the downtown [@ped]. Figure \@ref(fig:wrap-ped) shows the first five months of 2020 foot traffic at four different locations, for three different time slices, daily, weekly and full five months. Plot \@ref(fig:wrap-ped-1) shows hourly counts from January to May on an absolute timeline, facetted by locations. The stage 3 COVID-19 lockdown, on March 16, is marked by a change of color. (The pre-lockdown period is colored with dark green and lockdown with orange.) We can see a significant decline in foot traffic  at all four locations. QV Market is less affected probably because this is a major produce market, an essential service that continued to operate. Bourke St, a major shopping center, sees a gradual uptick in the last weeks of the period indicating that people were getting back into the shops.
+```{r wrap-ped-html, fig.show = "hold", fig.cap = "Animations showing wrapping after slicing the \\code{pedestrian20} data at different intervals, including daily and weekly. This type of interaction is made possible with Shiny elements.", eval = knitr::is_html_output()}
+include_graphics("img/shiny-wrap.gif")
+```
 
-Figure \@ref(fig:wrap-ped-2) and \@ref(fig:wrap-ped-3) show the slicing and wrapping of the series into daily and weekly sections, respectively. Multiple seasonalities pop out. There tends to be a daily pattern, especially visible at the main train station, Southern Cross Station. There is also a weekday vs weekend pattern, also most visible at Southern Cross Station. These seasonal patterns are still present during the lockdown, but the magnitude is greatly reduced. Numbers are also down at the produce market and the shopping center. Birrarung Marr is the most affected. This is the location of special events, and it is clear that these have completely disappeared during the lockdown.
+The city of Melbourne has sensors installed at various locations, to record hourly counts of pedestrians, in order to capture the daily rhythms of the downtown [@ped]. `r knitr::asis_output(ifelse(knitr::is_html_output(), 'Figure \\@ref(fig:wrap-ped-html) shows the first five months of 2020 foot traffic at four different locations, with the slicing and wrapping of the series into daily and weekly sections, respectively. Multiple seasonalities pop out. There tends to be a daily pattern, especially visible at the main train station, Southern Cross Station and QV market. There is also a weekday vs weekend pattern, also most visible at Southern Cross Station.', 'Figure \\@ref(fig:wrap-ped) shows the first five months of 2020 foot traffic at four different locations, for three different time slices, (a) daily, (b) weekly and (c) full five months. The stage 3 COVID-19 lockdown, on March 16, is marked by a change of color. (The pre-lockdown period is colored with dark green and lockdown with orange.) We can see a significant decline in foot traffic  at all four locations. QV Market is less affected probably because this is a major produce market, an essential service that continued to operate. Bourke St, a major shopping center, sees a gradual uptick in the last weeks of the period indicating that people were getting back into the shops. These seasonal patterns are still present during the lockdown, but the magnitude is greatly reduced. Numbers are also down at the produce market and the shopping center. Birrarung Marr is the most affected. This is the location of special events, and it is clear that these have completely disappeared during the lockdown.'))` 
 
-The wrapping procedure involves slicing the time index into seasonal periods of interest, and the result is diced time. For example, hourly pedestrian data can be decomposed into 24-hour blocks, which then overlays the counts for all respective days, as done in plot \@ref(fig:wrap-ped-2). For exploration, this slice position should be controlled interactively, so that many different slices can be examined rapidly. This can be achieved using shiny, with the functions provided in the \CRANpkg{tsibbletalk}.
+The wrapping procedure involves slicing the time index into seasonal periods of interest, and the result is diced time. For example, hourly pedestrian data can be decomposed into 24-hour blocks, which then overlays the counts for all respective days, as done in plot `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:wrap-ped-html)', '\\@ref(fig:wrap-ped)'))`. For exploration, this slice position should be controlled interactively, so that many different slices can be examined rapidly. This can be achieved using shiny, with the functions provided in the \CRANpkg{tsibbletalk}.
 
-This shiny module, decoupled to `tsibbleWrapUI()` and `tsibbleWrapServer()`, presents a clean interface and forms a reusable component that could be embedded in any shiny application. In general, a shiny module provides a vehicle for modularising shiny applications, relevant for both users and developers. As with all shiny modules, the first argument in both functions in \CRANpkg{tsibbletalk} requires a user-supplied id string that must be unique. The UI function `tsibbleWrapUI()` simply shows a slider that animates or controls the number of periods to be diced. The workhorse is the server function `tsibbleWrapServer()`, encapsulating the algorithm that transforms data and sends messages to update the plot accordingly. The `plot` argument expects a `ggplot` or `plotly` object, where one can plot data using either lines or other graphical elements (such as boxplots). As the function name suggests, a (shared) tsibble is needed to start the engine, so that the time `index` can be retrieved for dissection. The `period` option semantically takes a desired number of seasonal periods to be shifted, for example data shifted by "1 day", "2 days", or "1 week", etc. In other words, the `period` defines the grind level. For date-times (represented by `POSIXt`), the granularity ranges from fine "day" to a much coarser "year". The following code snippet generates Figure \@ref(fig:wrap-ped). The creation of the `pedestrian20` data is available in supplementary R files.
+This shiny module, decoupled to `tsibbleWrapUI()` and `tsibbleWrapServer()`, presents a clean interface and forms a reusable component that could be embedded in any shiny application. In general, a shiny module provides a vehicle for modularising shiny applications, relevant for both users and developers. As with all shiny modules, the first argument in both functions in \CRANpkg{tsibbletalk} requires a user-supplied id string that must be unique. The UI function `tsibbleWrapUI()` simply shows a slider that animates or controls the number of periods to be diced. The workhorse is the server function `tsibbleWrapServer()`, encapsulating the algorithm that transforms data and sends messages to update the plot accordingly. The `plot` argument expects a `ggplot` or `plotly` object, where one can plot data using either lines or other graphical elements (such as boxplots). As the function name suggests, a (shared) tsibble is needed to start the engine, so that the time `index` can be retrieved for dissection. The `period` option semantically takes a desired number of seasonal periods to be shifted, for example data shifted by "1 day", "2 days", or "1 week", etc. In other words, the `period` defines the grind level. For date-times (represented by `POSIXt`), the granularity ranges from fine "day" to a much coarser "year". The following code snippet generates Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:wrap-ped-html)', '\\@ref(fig:wrap-ped)'))`. The creation of the `pedestrian20` data is available in supplementary R files.
 
 ```{r load-ped, eval = FALSE}
 ```
@@ -154,7 +163,7 @@ This shiny module, decoupled to `tsibbleWrapUI()` and `tsibbleWrapServer()`, pre
 ```{r ped-slice, echo = TRUE, eval = FALSE}
 ```
 
-Figure \@ref(fig:wrap-ped-1) corresponds to the initial state, with the slider incremented by 1-day units. The "play" button near the end of the slider can automatically animate the slicing and dicing process, walking the viewer through all 24 hours of the 152 days. Alternatively, users can drag the slider to examine selected slices.
+Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:wrap-ped-html)', '\\@ref(fig:wrap-ped)'))` corresponds to the initial state, with the slider incremented by 1-day units. The "play" button near the end of the slider can automatically animate the slicing and dicing process, walking the viewer through all 24 hours of the 152 days. Alternatively, users can drag the slider to examine selected slices.
 
 In response to the slider input, the plot will be updated and loaded with newly transformed data. At its core, keeping the application as performant as possible is the top priority. Without completely redrawing the plot, the `plotlyProxy()` react method is invoked internally for talking to shiny. The underlying tsibble data is being called back and processed in R. Only transformed data gets fed back to the shiny server, for updating with resetting the x-axis ranges and breaks. The other plot configurations, such as marks, y-axes, and layouts, are cached and used as is.
 
