--- a/_articles/RJ-2021-050/tsibbletalk.bib
+++ b/_articles/RJ-2021-050/tsibbletalk.bib
@@ -69,10 +69,9 @@
 	url = {http://projecteuclid.org/euclid.ss/1408368571},
 	pages = {201--213},
 	number = {2},
-	journal = {Statistical Science},
+	journaltitle = {Statistical Science},
 	author = {Xie, Yihui and Hofmann, Heike and Cheng, Xiaoyue},
 	date = {2014-05},
-	year = 2014
 }
 
 @article{cheng_enabling_2016,
@@ -82,11 +81,10 @@
 	url = {https://www.tandfonline.com/doi/full/10.1080/10618600.2015.1105749},
 	pages = {1057--1076},
 	number = {4},
-	journal = {Journal of Computational and Graphical Statistics},
+	journaltitle = {Journal of Computational and Graphical Statistics},
 	shortjournal = {Journal of Computational and Graphical Statistics},
 	author = {Cheng, Xiaoyue and Cook, Dianne and Hofmann, Heike},
 	date = {2016-10},
-	year = 2016
 }
 
 @MANUAL{ped,
