--- a/articles/RJ-2021-050/RJ-2021-050.tex
+++ b/articles/RJ-2021-050/RJ-2021-050.tex
@@ -36,11 +36,11 @@ The \CRANpkg{tsibble} package (Wang, Cook, and Hyndman 2020) introduced a unifie
 
 In the spirit of tidy data from the \CRANpkg{tidyverse} (Wickham et al. 2019), the \textbf{tidyverts} suite features \texttt{tsibble} as the foundational data structure, and helps to build a fluid and fluent pipeline for time series analysis. Besides \CRANpkg{tsibble}, the \CRANpkg{feasts} (O'Hara-Wild, Hyndman, and Wang 2020b) and \CRANpkg{fable} (O'Hara-Wild, Hyndman, and Wang 2020a) packages fill the role of statistical analysis and forecasting in the \textbf{tidyverts} ecosystem. During all the steps of a time series analysis, the series of interest, denoted by the \texttt{key} variable, typically persist, through the trend modeling and also forecasting. We would typically want to examine the series across all of the keys.
 
-Figure \ref{fig:highlight-retail} illustrates examining temporal data with many keys. The data has 152 series corresponding to different industries in retail data. The multiple series are displayed using an overlaid time series plot, along with a scatterplot of two variables (trend versus seasonal strength) from feature space, where each series is represented by a dot. The feature space is computed using the \texttt{features()} function from \CRANpkg{feasts}, which summarises the original data for each series using various statistical features. This function along with other \textbf{tidyverts} functions is \texttt{tsibble}-aware, and outputs a table in a reduced form where each row corresponds to a series, which can be graphically displayed as in Figure \ref{fig:highlight-retail-2}.
+Figure \ref{fig:highlight-retail} illustrates examining temporal data with many keys. The data has 152 series corresponding to different industries in retail data. The multiple series are displayed using an overlaid time series plot, along with a scatterplot of two variables (trend versus seasonal strength) from feature space, where each series is represented by a dot. The feature space is computed using the \texttt{features()} function from \CRANpkg{feasts}, which summarises the original data for each series using various statistical features. This function along with other \textbf{tidyverts} functions is \texttt{tsibble}-aware, and outputs a table in a reduced form where each row corresponds to a series, which can be graphically displayed as in Figure \ref{fig:highlight-retail} (right).
 
 \begin{figure}
 
-{\centering \subfloat[\label{fig:highlight-retail-1}]{\includegraphics[width=.49\linewidth]{figure/highlight-retail-1} }\subfloat[\label{fig:highlight-retail-2}]{\includegraphics[width=.49\linewidth]{figure/highlight-retail-2} }
+{\centering \includegraphics[width=\textwidth]{figure/highlight-retail-1} 
 
 }
 
@@ -79,7 +79,11 @@ To illustrate nesting and crossing we use the \texttt{tourism\_monthly} dataset 
 \begin{verbatim}
 library(tsibble)
 library(tsibbletalk)
-tourism_shared <- tourism_monthly %>% 
+library(dplyr)
+tourism_shared <- tourism_monthly %>%
+  # Comment out the next line to run the full example
+  filter(State %in% c("Tasmania", "Western Australia")) %>%
+  mutate(Region = stringr::str_replace(Region, "Australia's ", "WA's ")) %>%
   as_shared_tsibble(spec = (State / Region) * Purpose)
 \end{verbatim}
 
@@ -95,7 +99,7 @@ tourism_shared <- tourism_monthly %>%
 \noindent There is a three-level hierarchy: the root node is implicitly Australia, geographically disaggregated to states, and lower-level tourism regions. A new handy function \texttt{plotly\_key\_tree()} has been implemented to help explore the hierarchy. It interprets hierarchies in the shared tsibble's \texttt{spec} as a tree view, built with \CRANpkg{plotly}. The following code line produces the linked tree diagram (left panel of Figure \ref{fig:tourism-linking-fig}). The visual for the tree hierarchy detangles a group of related series and provides a bird's eye view of the data organization.
 
 \begin{verbatim}
-p_l <- plotly_key_tree(tourism_shared, height = 1100, width = 800)
+p_l <- plotly_key_tree(tourism_shared, height = 800, width = 800)
 \end{verbatim}
 
 The tree plot provides the graphics skeleton, upon which the rest of the data plots can be attached. In this example, small multiples of line plots are placed at the top right of Figure \ref{fig:tourism-linking-fig} to explore the temporal trend across regions by the trip purpose. The shared tsibble data can be directly piped into \CRANpkg{ggplot2} code to create this.
@@ -104,7 +108,7 @@ The tree plot provides the graphics skeleton, upon which the rest of the data pl
 library(ggplot2)
 p_tr <- tourism_shared %>%
   ggplot(aes(x = Month, y = Trips)) +
-  geom_line(aes(group = Region), alpha = .5, size = .4) +
+  geom_line(aes(group = Region), alpha = .5, linewidth = .4) +
   facet_wrap(~ Purpose, scales = "free_y") +
   scale_x_yearmonth(date_breaks = "5 years", date_labels = "%Y")
 \end{verbatim}
@@ -126,14 +130,14 @@ There is one final step, to compose the three plots into an ensemble of coordina
 library(plotly)
 subplot(p_l,
   subplot(
-    ggplotly(p_tr, tooltip = "Region", width = 1100),
-    ggplotly(p_br, tooltip = "Region", width = 1100),
+    ggplotly(p_tr, tooltip = "Region", width = 700),
+    ggplotly(p_br, tooltip = "Region", width = 700),
     nrows = 2),
   widths = c(.4, .6)) %>%
   highlight(dynamic = TRUE)
 \end{verbatim}
 
-Since all plots are created from one shared tsibble data source, they are self-linking views. Nodes, lines, and points are hoverable and clickable. Given the \texttt{spec}, clicking either one element in any plot highlights all points that match the \texttt{Region} category, that is, categorical linking. Figure \ref{fig:tourism-linking-fig} is a static view of an interactive exploration. The steps in getting to this point were:
+Since all plots are created from one shared tsibble data source, they are self-linking views. Nodes, lines, and points are hoverable and clickable. Given the \texttt{spec}, clicking either one element in any plot highlights all points that match the \texttt{Region} category, that is, categorical linking. Figure \ref{fig:tourism-linking-fig} provides an interactive exploration. The steps in getting to this point were:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -141,7 +145,7 @@ Since all plots are created from one shared tsibble data source, they are self-l
 \item
   A branch of the tree corresponding to Western Australia was first selected. (The names of the regions are a little odd, which is a quirk of the data set, but all four areas, Australia's South West, \ldots., correspond to tourist destinations in Western Australia. Hovering over the node on the branch brings up the state name.) This generated the response in the line plots and the scatterplot that colored corresponding time series and points as blue.
 \item
-  To enable persistent selection, in oder to compare regions or states, ``Shift'' and click on the tree was done, after switching the color to red. This generated the response that points and time series corresponding to Sydney were highlighted in red.
+  To enable persistent selection, in order to compare regions or states, ``Shift'' and click on the tree was done, after switching the color to red. This generated the response that points and time series corresponding to Sydney were highlighted in red.
 \item
   Hovering over the points brings up the label for Sydney.
 \end{enumerate}
@@ -164,11 +168,9 @@ An important aspect of temporal data is the time context. Time has a cyclical st
 \caption{Snapshots wrapping after slicing the \code{pedestrian20} data at different intervals, (a) none, (b) daily and (c) weekly. This type of interaction is made possible with Shiny elements.}\label{fig:wrap-ped}
 \end{figure}
 
-The city of Melbourne has sensors installed at various locations, to record hourly counts of pedestrians, in order to capture the daily rhythms of the downtown (City of Melbourne 2020). Figure \ref{fig:wrap-ped} shows the first five months of 2020 foot traffic at four different locations, for three different time slices, daily, weekly and full five months. Plot \ref{fig:wrap-ped-1} shows hourly counts from January to May on an absolute timeline, facetted by locations. The stage 3 COVID-19 lockdown, on March 16, is marked by a change of color. (The pre-lockdown period is colored with dark green and lockdown with orange.) We can see a significant decline in foot traffic at all four locations. QV Market is less affected probably because this is a major produce market, an essential service that continued to operate. Bourke St, a major shopping center, sees a gradual uptick in the last weeks of the period indicating that people were getting back into the shops.
+The city of Melbourne has sensors installed at various locations, to record hourly counts of pedestrians, in order to capture the daily rhythms of the downtown (City of Melbourne 2020). Figure \ref{fig:wrap-ped} shows the first five months of 2020 foot traffic at four different locations, for three different time slices, (a) daily, (b) weekly and (c) full five months. The stage 3 COVID-19 lockdown, on March 16, is marked by a change of color. (The pre-lockdown period is colored with dark green and lockdown with orange.) We can see a significant decline in foot traffic at all four locations. QV Market is less affected probably because this is a major produce market, an essential service that continued to operate. Bourke St, a major shopping center, sees a gradual uptick in the last weeks of the period indicating that people were getting back into the shops. These seasonal patterns are still present during the lockdown, but the magnitude is greatly reduced. Numbers are also down at the produce market and the shopping center. Birrarung Marr is the most affected. This is the location of special events, and it is clear that these have completely disappeared during the lockdown.
 
-Figure \ref{fig:wrap-ped-2} and \ref{fig:wrap-ped-3} show the slicing and wrapping of the series into daily and weekly sections, respectively. Multiple seasonalities pop out. There tends to be a daily pattern, especially visible at the main train station, Southern Cross Station. There is also a weekday vs weekend pattern, also most visible at Southern Cross Station. These seasonal patterns are still present during the lockdown, but the magnitude is greatly reduced. Numbers are also down at the produce market and the shopping center. Birrarung Marr is the most affected. This is the location of special events, and it is clear that these have completely disappeared during the lockdown.
-
-The wrapping procedure involves slicing the time index into seasonal periods of interest, and the result is diced time. For example, hourly pedestrian data can be decomposed into 24-hour blocks, which then overlays the counts for all respective days, as done in plot \ref{fig:wrap-ped-2}. For exploration, this slice position should be controlled interactively, so that many different slices can be examined rapidly. This can be achieved using shiny, with the functions provided in the \CRANpkg{tsibbletalk}.
+The wrapping procedure involves slicing the time index into seasonal periods of interest, and the result is diced time. For example, hourly pedestrian data can be decomposed into 24-hour blocks, which then overlays the counts for all respective days, as done in plot \ref{fig:wrap-ped}. For exploration, this slice position should be controlled interactively, so that many different slices can be examined rapidly. This can be achieved using shiny, with the functions provided in the \CRANpkg{tsibbletalk}.
 
 This shiny module, decoupled to \texttt{tsibbleWrapUI()} and \texttt{tsibbleWrapServer()}, presents a clean interface and forms a reusable component that could be embedded in any shiny application. In general, a shiny module provides a vehicle for modularising shiny applications, relevant for both users and developers. As with all shiny modules, the first argument in both functions in \CRANpkg{tsibbletalk} requires a user-supplied id string that must be unique. The UI function \texttt{tsibbleWrapUI()} simply shows a slider that animates or controls the number of periods to be diced. The workhorse is the server function \texttt{tsibbleWrapServer()}, encapsulating the algorithm that transforms data and sends messages to update the plot accordingly. The \texttt{plot} argument expects a \texttt{ggplot} or \texttt{plotly} object, where one can plot data using either lines or other graphical elements (such as boxplots). As the function name suggests, a (shared) tsibble is needed to start the engine, so that the time \texttt{index} can be retrieved for dissection. The \texttt{period} option semantically takes a desired number of seasonal periods to be shifted, for example data shifted by ``1 day'', ``2 days'', or ``1 week'', etc. In other words, the \texttt{period} defines the grind level. For date-times (represented by \texttt{POSIXt}), the granularity ranges from fine ``day'' to a much coarser ``year''. The following code snippet generates Figure \ref{fig:wrap-ped}. The creation of the \texttt{pedestrian20} data is available in supplementary R files.
 
@@ -191,7 +193,7 @@ server <- function(input, output, session) {
 shinyApp(ui, server)
 \end{verbatim}
 
-Figure \ref{fig:wrap-ped-1} corresponds to the initial state, with the slider incremented by 1-day units. The ``play'' button near the end of the slider can automatically animate the slicing and dicing process, walking the viewer through all 24 hours of the 152 days. Alternatively, users can drag the slider to examine selected slices.
+Figure \ref{fig:wrap-ped} corresponds to the initial state, with the slider incremented by 1-day units. The ``play'' button near the end of the slider can automatically animate the slicing and dicing process, walking the viewer through all 24 hours of the 152 days. Alternatively, users can drag the slider to examine selected slices.
 
 In response to the slider input, the plot will be updated and loaded with newly transformed data. At its core, keeping the application as performant as possible is the top priority. Without completely redrawing the plot, the \texttt{plotlyProxy()} react method is invoked internally for talking to shiny. The underlying tsibble data is being called back and processed in R. Only transformed data gets fed back to the shiny server, for updating with resetting the x-axis ranges and breaks. The other plot configurations, such as marks, y-axes, and layouts, are cached and used as is.
 
@@ -282,7 +284,7 @@ The University of Auckland\\%
 Department of Statistics\\
 %
 %
-%
+\textit{ORCiD: \href{https://orcid.org/0000-0001-6448-5260}{0000-0001-6448-5260}}\\%
 \href{mailto:earo.wang@auckland.ac.nz}{\nolinkurl{earo.wang@auckland.ac.nz}}%
 }
 
@@ -292,6 +294,6 @@ Monash University\\%
 Department of Econometrics and Business Statistics\\
 %
 %
-%
+\textit{ORCiD: \href{https://orcid.org/0000-0002-3813-7155}{0000-0002-3813-7155}}\\%
 \href{mailto:dicook@monash.edu}{\nolinkurl{dicook@monash.edu}}%
 }
